# cad-percept

./: .gitignore  .rosinstall  README.md  dependencies.rosinstall  frames.gv  prepare-clang-format.sh
cad-percept/: package.xml
cgal_conversions/: CMakeLists.txt  package.xml
cgal_conversions/include/: mesh_conversions.h
cgal_conversions/src/: eigen_conversions.cc  mesh_conversions.cc  tf_conversions.cc
cgal_conversions/test/: test_cgal_eigen_adapter.cpp  test_cgal_eigen_adapter_2d.cpp  test_eigen_conversions.cpp  test_mesh_messages.cpp
cgal_definitions/: CMakeLists.txt  package.xml
cgal_definitions/src/: mesh_model.cc  mesh_model.cpp
cgal_definitions/test/: test_mesh_model.cpp
cgal_interface/: CMakeLists.txt  package.xml
cgal_interface/src/: cgal_conversions.cpp
cgal_msgs/: CMakeLists.txt  package.xml
cgal_msgs/msg/: ColoredMesh.msg  GeomDeviation.msg  ProbabilisticMesh.msg  ReferenceTask.msg  TriangleMesh.msg  TriangleMeshStamped.msg
cgal_msgs/srv/: FacetID.srv  Transformation.srv
cgal_visualizations/: CMakeLists.txt  package.xml  plugin_description.xml
cgal_visualizations/script/: publish_colored_mesh.sh  publish_mesh.sh  publish_mesh_red.sh  publish_probabilistic_mesh.sh
cgal_visualizations/src/: colored_mesh_display.cc  mesh_display.cc  mesh_visual.cc  probabilistic_mesh_display.cc  probabilistic_mesh_visual.cc  triangle_mesh_display.cc
cpt_changes/: CMakeLists.txt  README.md  package.xml
cpt_changes/launch/: architect_model.urdf  changes.launch  demo_changes.launch
cpt_changes/resources/: P_deviated_2.pcd  demo_reading_pc_additional_wall.pcd  model.dae  room.off
cpt_changes/src/: cadify_ros.cc  cadify_ros_node.cc  changes_ros.cc  changes_ros_node.cc
cpt_collision_manifolds/: CMakeLists.txt  package.xml
cpt_collision_manifolds/launch/: test.launch
cpt_collision_manifolds/src/: collision_manifold_test_node.cc  cpt_collision_manifolds_node.cc  iso_surface_manifold.cc
cpt_deviation_analysis/: CMakeLists.txt  README.md  package.xml
cpt_deviation_analysis/launch/: icp_configuration.yaml  nodes_on_robot.launch  normal_filter.yaml  online.launch  online_with_rviz.launch  parameters.yaml  rviz.rviz
cpt_deviation_analysis/scripts/: attach-tmux.bash  create-tmux.bash  detach-tmux.bash
cpt_deviation_analysis/src/: deviation_mesh_publisher.cc  deviations.cpp  relative_deviations_ros.cpp
cpt_deviation_analysis/test/: test_deviations.cpp
cpt_localization/: CMakeLists.txt  package.xml
cpt_localization/launch/: mesh_localizer.launch  mesh_model.urdf
cpt_localization/resources/: cla_updated.off  model.dae
cpt_localization/src/: mesh_localizer.cpp  mesh_localizer_ros.cpp  mesh_localizer_ros_node.cpp
cpt_localization/test/: test_localizer.cpp
cpt_matching_algorithms/: CMakeLists.txt  package.xml
cpt_matching_algorithms/cache/: map_1.yaml  map_12.yaml  map_318.yaml  map_40.yaml  map_560.yaml  map_560_only_upper_room.yaml  map_test_318.yaml
cpt_matching_algorithms/config/: bounded_planes_config.yaml  evaluation_go_icp_config.yaml  evaluation_runner_config.yaml  go_icp_config.yaml  map_plane_extraction_config.yaml  map_planes_file.yaml  plane_extraction_config.yaml  plane_matching_config.yaml  rht_config.yaml  rviz.yaml  rviz_movable_lidar_sim.yaml  rviz_segmentation.yaml  sim_lidar_config.yaml  test_bench_config.yaml  test_match_config.yaml  test_results.txt
cpt_matching_algorithms/include/: super4pcs_demo_utils.h
cpt_matching_algorithms/launch/: cpt_selective_icp.launch  evaluation_go_icp.launch  evaluation_runner.launch  extract_planes.launch  movable_lidar_sim.launch  read_data.launch  read_to_pcl_data.launch  test_bench.launch  test_extract_planes.launch  test_matcher.launch
cpt_matching_algorithms/resources/: construct.off
cpt_matching_algorithms/test/: test_main.cpp  test_plane_extraction.cpp  testlaunch.launch
cpt_meshcad_interface/: CMakeLists.txt  README.md  facet_selector.py  interactive_mesh.py  package.xml  setup.py
cpt_meshcad_interface/launch/: meshcad_interface.launch
cpt_meshcad_interface/scripts/: facet_selector_node.py  interactive_mesh_node.py
cpt_meshcad_interface/src/: cad_interface.cc  cad_interface_node.cc
cpt_meshing/: CMakeLists.txt  package.xml
cpt_meshing/cfg/: default_mesher.yaml
cpt_meshing/launch/: mesher.launch
cpt_meshing/src/: cpt_meshing_node.cpp  cpt_meshing_test_node.cpp  leica_scan_publisher.cc  leica_scan_publisher_node.cc  meshing_node.cc
cpt_object_detection/: CMakeLists.txt  README.md  package.xml
cpt_object_detection/launch/: object_detection_ICP.launch
cpt_object_detection/resources/: Y10148_Torus Thick.off  icp_config.yaml  pawn.off
cpt_object_detection/src/: detection_matcher.cpp  detection_matcher_node.cpp
cpt_planning/: CMakeLists.txt  package.xml
cpt_planning/src/: test.cc
cpt_ros/: CMakeLists.txt  package.xml
cpt_ros/cfg/: RMPConfig.cfg
cpt_ros/launch/: collision_manifold.launch  distance_test.launch  omav_planner.launch  planning_test.launch  rmp_test.launch  voliro.launch  zdistance_test.launch
cpt_ros/src/: ros_config_provider.cc
cpt_selective_icp/: CMakeLists.txt  README.md  package.xml  setup.py
cpt_selective_icp/config/: full_icp.yaml  icp_dynamic.yaml  input_filters.yaml  map_post_filter.yaml  mapper_parameters.yaml  selective_icp.yaml
cpt_selective_icp/exports/: T_prisma_to_marker2_123455_27092019.csv  T_prisma_to_marker2_124102_27092019.csv  T_prisma_to_marker2_124315_27092019.csv  T_prisma_to_marker2_134551_27092019.csv  T_scanner_to_marker2_123455_27092019.csv  T_scanner_to_marker2_124102_27092019.csv  T_scanner_to_marker2_124315_27092019.csv  T_scanner_to_marker2_134551_27092019.csv  T_scanner_to_marker2_221859_14092019.csv  T_updated_scanner_to_map_172419_12092019.csv  T_updated_scanner_to_map_172442_12092019.csv  T_updated_scanner_to_map_172559_12092019.csv  T_updated_scanner_to_map_174227_12092019.csv  T_updated_scanner_to_map_220448_12092019.csv  metrics_123455_27092019.csv  (+49 more)
cpt_utils/: CMakeLists.txt  package.xml  setup.py
goicp_catkin/: CMakeLists.txt  package.xml
matching_algorithms/: CMakeLists.txt  package.xml
(+6241 files in other folders)
