<?xml version="1.0"?>
<package format="2">
  <name>cad-percept</name>
  <version>0.0.1</version>
  <description>cad-percept</description>

  <author email="mpantic@ethz.ch">Michael Pantic</author>
  <author email="gawela@ethz.ch">Abel Gawel</author>
  <author email="hermann.blum@mavt.ethz.ch">Hermann Blum</author>
  <maintainer email="michael.pantic@mavt.ethz.ch">Michael Pantic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cgal_catkin</depend>

  <depend>cgal_interface</depend>
  <depend>cgal_msgs</depend>
  <depend>cgal_visualizations</depend>

</package>
