<?xml version="1.0"?>
<package format="2">
  <name>cgal_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for Cad-percept</description>

  <author email="michael.pantic@mavt.ethz.ch">Michael Pantic</author>
  <maintainer email="michael.pantic@mavt.ethz.ch">Michael Pantic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
</package>
