<?xml version="1.0"?>
<package format="2">
  <name>cgal_visualizations</name>
  <version>0.0.1</version>
  <description>cgal_visualizations</description>

  <author email="mpantic@ethz.ch">Michael Pantic</author>
  <author email="gawela@ethz.ch">Abel Gawel</author>
  <author email="hermann.blum@mavt.ethz.ch">Hermann Blum</author>
  <maintainer email="michael.pantic@mavt.ethz.ch">Michael Pantic</maintainer>

  <!-- The base of this code is adapated from the Voxblox Visualizer -->

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cgal_catkin</depend>
  <depend>cgal_msgs</depend>
  <depend>cgal_definitions</depend>
  <depend>rviz</depend>
  <depend>Eigen3</depend>
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
