<?xml version="1.0"?>
<package format="2">
  <name>cpt_changes</name>
  <version>0.0.1</version>
  <description>Matching depth data (point clouds) against existing CAD models (meshes).</description>

  <author email="gawela@ethz.ch">Abel Gawel</author>
  <author email="mpantic@ethz.ch">Michael Pantic</author>
  <author email="blumh@ethz.ch">Hermann Blum</author>
  <author email="jstiefel@student.ethz.ch">Julian Stiefel</author>
  <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cgal_catkin</depend>
  <depend>cgal_definitions</depend>
  <depend>cpt_utils</depend>
  <depend>gtsam_catkin</depend>
  <depend>minkindr</depend>
  <depend>minkindr_gtsam</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  
</package>
