<?xml version="1.0"?>
<package format="2">
    <name>cpt_collision_manifolds</name>
    <version>0.0.1</version>
    <description>cpt_utils</description>

    <author email="mpantic@ethz.ch">Michael Pantic</author>
    <maintainer email="mpantic@ethz.ch">Michael Pantic</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>cgal_definitions</depend>
    <depend>cgal_conversions</depend>
    <depend>cpt_ros</depend>

    <depend>cgal_catkin</depend>
    <depend>eigen_catkin</depend>
    <depend>glog_catkin</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>tf_conversions</depend>

</package>
