<?xml version="1.0"?>
<package format="2">
  <name>cpt_matching_algorithms</name>
  <version>0.1.0</version>
  <description>The cpt_matching_algorithms package</description>

  <maintainer email="dreherm@student.ethz.ch">Marc Dreher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cgal_conversions</depend>
  <depend>cgal_definitions</depend>
  <depend>cgal_msgs</depend>
  <depend>cpt_utils</depend>
  <depend>libpointmatcher</depend>
  <depend>libpointmatcher_ros</depend> 
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  
</package>
