<?xml version="1.0"?>
<package format="2">
  <name>cpt_meshcad_interface</name>
  <version>0.1.0</version>
  <description>
    Mesh model handling from CAD model.
  </description>

  <author email="gawela@ethz.ch">Abel Gawel</author>
  <author email="jstiefel@student.ethz.ch">Julian Stiefel</author>
  <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

  <depend>cgal_definitions</depend>
  <depend>cgal_msgs</depend>
  <depend>cgal_visualizations</depend>
  <depend>cgal_conversions</depend>
  <!-- TODO: add this again and delete srv folder:
  <depend>cpt_selective_icp</depend>
  -->

</package>
