<?xml version="1.0"?>
<package format="2">
    <name>cpt_meshing</name>
    <version>0.0.1</version>
    <description>cpt_meshing</description>

    <author email="mpantic@ethz.ch">Michael Pantic</author>
    <author email="gawela@ethz.ch">Abel Gawel</author>
    <author email="blumh@ethz.ch">Hermann Blum</author>
    <maintainer email="michael.pantic@mavt.ethz.ch">Michael Pantic</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>cgal_catkin</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>sensor_msgs</depend>
    <depend>cgal_definitions</depend>
    <depend>cgal_conversions</depend>
    <depend>cgal_msgs</depend>
    <depend>roscpp</depend>
</package>
