<?xml version="1.0"?>
<package format="2">
  <name>cpt_object_detection</name>
  <version>0.0.0</version>
  <description>
    ROS package to perform object detection of a point cloud and a loaded mesh model.
  </description>

  <author email="gasserl@mavt.ethz.ch">Laura Gasser</author>
  <maintainer email="gasserl@mavt.ethz.ch">Laura Gasser</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>cgal_conversions</depend>
  <depend>cgal_definitions</depend>
  <depend>cgal_msgs</depend>
</package>
