<?xml version="1.0"?>
<package format="2">
    <name>cpt_ros</name>
    <version>0.0.1</version>
    <description>cpt_ros</description>

    <author email="mpantic@ethz.ch">Michael Pantic</author>
    <author email="gawela@ethz.ch">Abel Gawel</author>
    <author email="blumh@ethz.ch">Hermann Blum</author>
    <author email="jstiefel@student.ethz.ch">Julian Stiefel</author>
    <maintainer email="michael.pantic@mavt.ethz.ch">Michael Pantic</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <test_depend>rosunit</test_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>glog_catkin</depend>
    <depend>cgal_catkin</depend>
    <depend>cgal_definitions</depend>
    <depend>cgal_msgs</depend>
    <depend>cpt_utils</depend>
    <depend>cpt_planning</depend>
    <depend>cpt_collision_manifolds</depend>
    <depend>eigen_catkin</depend>
    <depend>roscpp</depend>
    <depend>rmpflow</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_ros</depend>
</package>
